# fs-for-renewable-energy-prediction

./: .container.env  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
datasets/literature_study/: literature_review_wt.csv
exp_configs/: base.yaml  debug.yaml
exp_configs/matrices/: paper_grid.yaml
literature_study/: literature_review_pv.csv
report/: 01_literature_review.ipynb  02_experiment_results.ipynb
src/: evaluate_notebooks.py  experiment_runner.py  main.py  paper_experiments.sh  run_multiple_experiments.py  run_paper_experiments.py  run_single_experiment.py
src/config/: config_utils.py  constants.py
src/config/experiments/: base.yaml  debug.yaml
src/config/experiments/matrices/: paper_grid.yaml
src/data/: __init__.py  data_processing.py  dataset.py  feature_names.py  pvod_utils.py  pvodataset.py  utils.py
src/evaluation/: data.py  generate_report.py
src/experiments/: __init__.py  condition_utils.py  launcher.py  matrix_generator.py  naming_engine.py  utils.py
src/feature_selection/: __init__.py  feature_selection.py
src/models/: models.py
src/mplstyles/: lncs.mplstyle  lncs_poster.mplstyle  lncs_small.mplstyle
src/notebooks/: 01_literature_review.ipynb  02_experiment_results.ipynb
src/results_analysis/: __init__.py  analysis_utils.py
src/training/: logging.py  neptune_utils.py
src/utils/: __init__.py  eval.py  misc.py  plotting.py
